# Kero-Trampo

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  makefile  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: 057652eb3d0a_alter_tables_listjobsarea_jobsarea_add_.py  08794e78ddd0_torna_dados_pre_populados_unique.py  153f91c43f48_create_relation_company_user.py  1857cc2d7c3e_troca_int_para_float_e_datatime_para_.py  2014f2c2e03e_turn_roleuuid_nullablefalse.py  2239ff61dd5f_add_column_address_uuid_table_company.py  22b42edf773a_ajusting_useruuid_in_coursestabel.py  235c80900183_add_campusuuid_courses_anda_remove_.py  3973cc2176f2_create_relation_student_academicprofile.py  3999274ba3c8_sobe_funcao_de_pop_db_init.py  3ce2db584f9a_add_others_table_listjobsarea.py  40d5410b6eda_alter_answersuuid_false_to_true.py  47c5ea221fe0_add_foreignkey_table_branchoffice.py  4d0fd7d91862_pop_init_db.py  5946d3d454fb_config_foregeinkey_table_coursespcd.py  5a5acc802e34_torna_name_pcd_unique.py  698ba6443ce9_add_gender_in_students_table.py  720ff909380e_init_db.py  7b62c75d6698_teste_pre_pop.py  7bc2c8b17b51_add_others_table_quiz.py  7d655f8a3e9e_alter_table_quiz.py  9c99a9587cf0_alter_tables_lits.py  9d959acb2124_adiciona_number_children_em_students_e_.py  a2748330785b_altera_column_birthdate_de_datetime_.py  a83c59bd8951_add_foreignkey_adn_relations_table_.py  (+12 more)
app/: main.py
docs/: Egress Project.drawio.xml  Untitled.sql  __init__.py  address_model.py  models.py  profile_model.py  role_model.py  teste2.drawio  user_model.py
(+121 files in other folders)
